--- a/debian/install
+++ b/debian/install
@@ -1,10 +1,22 @@
 README.md           opt/teletwat/
-app.py              opt/teletwat/
 config.json         opt/teletwat/
+requirements.txt    opt/teletwat/
+app.py              opt/teletwat/
+gst_aes67.py        opt/teletwat/
+gst_base.py         opt/teletwat/
+gst
+
+cd /mnt/c/Users/jligh/Downloads/teletwat/teletwat
+
+# Replace debian/install with a correct, explicit list (no venv)
+cat > debian/install <<'EOF'
+README.md           opt/teletwat/
+config.json         opt/teletwat/
+requirements.txt    opt/teletwat/
+app.py              opt/teletwat/
 gst_aes67.py        opt/teletwat/
 gst_base.py         opt/teletwat/
 gst_ndi.py          opt/teletwat/
 tvh.py              opt/teletwat/
-requirements.txt    opt/teletwat/
 static/*            opt/teletwat/static/
 debian/teletwat.service  lib/systemd/system/
